<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Android App Test</string>
	<string name="name">Name:</string>
	<string name="default_email">Default Recipient Email:</string>
	<string name="email">Email:</string>
	<string name="save">Save</string>
	<string name="pounds">Pounds</string>
	<string name="kilos">Kilograms</string>
	<string name="error">Error!</string>
	<string name="name_missing">You forgot to enter a name!</string>
	<string name="email_missing">You forgot to enter an email!</string>
	<string name="ok">ok</string>
	<string name="weight_number">You must put a number for the weight!</string>
	<string name="cancel">Cancel</string>
	<string name="unknownType">unknown</string>
	<string name="selectAccountLabel">Select</string>
	<string name="selectLabel">Select label</string>
	<string name="contactCreationFailure">Contact creation failed, check logs.</string>
	<string name="contactEmail">Contact Email</string>
	<string name="contactName">Contact Name</string>
	<string name="contactPhone">Contact Phone</string>
	<string name="targetAccountLabel">Target Account</string>
	<string name="phoneNumberFormatException">Only numbers, parentheses, and dashes are allowed for the phone number.</string>
    <string name="emailFormatException">Not a valid email address.</string>
	<string name="recordSaved">Record Saved</string>
	<string name="createNewContact">Create New Contact</string>
	<string name="myself">Myself</string>
	<string name="contact">Contact</string>
	<string name="noEmail">This person has no email!</string>
	<string name="shareWith">Share with who?</string>
	<string name="share">Share</string>
	<string name="first">First</string>
	<string name="last">Last</string>
	<string name="dateRange">Date Range:</string>
	<string name="to">to</string>
	<string name="custom">Custom</string>
	<string name="emailSubject">Weight Information for </string>
    <string name="addFromContact">Add from Contact</string>
    <string name="unknownName">Unknown Name</string>
    <string name="editContact">Edit Default Contacts</string>
    <string name="chooseEmail">Choose email</string>
</resources>
