<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  android:id="@+id/widget0"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <RelativeLayout
    android:id="@+id/widget1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <TextView
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/name"
      android:id="@+id/textView1"
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true">
    </TextView>
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/nameEditText"
      android:inputType="textPersonName"
      android:layout_below="@+id/textView1"
      android:layout_alignParentLeft="true">
    </EditText>
    <TextView
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/email"
      android:id="@+id/textView2"
      android:layout_below="@+id/nameEditText"
      android:layout_alignParentLeft="true">
    </TextView>
    <EditText
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:id="@+id/emailEditText"
      android:inputType="textEmailAddress"
      android:layout_below="@+id/textView2"
      android:layout_alignParentLeft="true">
    </EditText>
    <TextView
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/default_email"
      android:id="@+id/textView123"
      android:layout_below="@+id/emailEditText"
      android:layout_alignParentLeft="true">
    </TextView>
    <TextView
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:id="@+id/defaultRecipientEmail"
      android:layout_below="@+id/textView123"
      android:layout_alignParentLeft="true">
    </TextView>
    <Button
      android:text="@string/save"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:id="@+id/saveButton"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true">
    </Button>
    <ToggleButton
      android:layout_height="wrap_content"
      android:textOn="@string/contact"
      android:textOff="@string/contact"
      android:id="@+id/contactDefaultContact"
      android:layout_width="wrap_content"
      android:layout_alignTop="@+id/myselfDefaultContact"
      android:layout_toRightOf="@+id/myselfDefaultContact"></ToggleButton>
    <ToggleButton
      android:layout_height="wrap_content"
      android:textOn="@string/myself"
      android:textOff="@string/myself"
      android:id="@+id/myselfDefaultContact"
      android:layout_width="wrap_content"
      android:layout_below="@+id/defaultRecipientEmail"
      android:layout_alignParentLeft="true"></ToggleButton>
    <Button
      android:text="@string/createNewContact"
      android:layout_height="wrap_content"
      android:id="@+id/createNewContact"
      android:layout_width="wrap_content"
      android:layout_alignTop="@+id/contactDefaultContact"
      android:layout_toRightOf="@+id/contactDefaultContact"></Button>
    <RadioGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/optionsGroup"
      android:layout_below="@+id/createNewContact"
      android:layout_alignParentLeft="true">
      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pounds"
        android:checked="true"
        android:id="@+id/optionsPounds"></RadioButton>
      <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilos"
        android:id="@+id/optionsKilos"></RadioButton>
    </RadioGroup>

  </RelativeLayout>
</ScrollView>
