<?xml version="1.0" encoding="utf-8"?>

<ScrollView
  android:id="@+id/widget0"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <RelativeLayout
    android:id="@+id/widget1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Spinner
      android:layout_height="wrap_content"
      android:id="@+id/accounts"
      android:layout_width="match_parent"
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"></Spinner>
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/contactName"
      android:id="@+id/textView1"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:layout_below="@+id/accounts"
      android:layout_alignParentLeft="true"></TextView>
    <EditText
      android:layout_width="match_parent"
      android:id="@+id/nameField"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:layout_below="@+id/textView1"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true">
    </EditText>
    <RelativeLayout
      android:id="@+id/tr"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/nameField">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactPhone"
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentLeft="true"></TextView>

      <ImageButton
        android:layout_width="wrap_content"
        android:id="@+id/phone_add_button"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_plus_sign"></ImageButton>

      <ImageButton
        android:layout_width="wrap_content"
        android:id="@+id/phone_minus_button"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/phone_add_button"
        android:src="@drawable/ic_minus_sign"></ImageButton>
    </RelativeLayout>


    <TableLayout
      android:layout_width="match_parent"
      android:id="@+id/phone_table"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tr"
      android:layout_alignParentLeft="true">
    </TableLayout>


    <RelativeLayout
      android:id="@+id/tr1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/phone_table">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactEmail"
        android:id="@+id/textView12"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentLeft="true"></TextView>

      <ImageButton
        android:layout_width="wrap_content"
        android:id="@+id/email_add_button"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_plus_sign"></ImageButton>
      <ImageButton
        android:layout_width="wrap_content"
        android:id="@+id/email_minus_button"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/email_add_button"
        android:src="@drawable/ic_minus_sign"></ImageButton>
    </RelativeLayout>


    <TableLayout
      android:layout_width="match_parent"
      android:id="@+id/email_table"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tr1"
      android:layout_alignParentLeft="true">
    </TableLayout>
    <Button
      android:layout_width="wrap_content"
      android:id="@+id/createContactSave"
      android:text="@string/save"
      android:layout_height="wrap_content"
      android:layout_below="@+id/email_table"
      android:layout_alignParentRight="true"></Button>
  </RelativeLayout>
</ScrollView>